syntax = "proto3";

package go.micro.service.checkSMS;

service CheckSMS {
	rpc Check(Request) returns (Response) {}
}

message Message {
}

enum SMSType {
    Register  = 0;
}

message Request {
	string phone = 1;
	SMSType Type = 2;
	string code = 3;
}

enum EheckStatus {
    Fail = 0;
    Succ = 1;
    Expire = 2;
}
message Response {
    EheckStatus status = 1;
}

